<resources>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="debug_ui_redesign_primary_button" translatable="false"> Primary Button</string>
    <string name="debug_ui_redesign_raised_button" translatable="false"> Raised Button</string>
    <string name="debug_ui_redesign_unelevated_button" translatable="false"> Unelevated</string>
    <string name="debug_ui_redesign_outlined_button" translatable="false"> Outlined Button</string>
    <string name="debug_ui_redesign_text_button" translatable="false"> Text Button</string>
    <string name="debug_ui_redesign_input_chip" translatable="false"> Input Chip</string>
    <string name="debug_ui_redesign_choice_chip" translatable="false"> Choice Chip</string>
    <string name="debug_ui_redesign_filter_chip" translatable="false"> Filter Chip</string>
    <string name="debug_ui_redesign_checkbox" translatable="false"> Checkbox</string>
    <string name="debug_ui_redesign_radio_button" translatable="false"> Radio Button</string>
    <string name="debug_ui_redesign_switch" translatable="false"> Switch</string>
    <string name="debug_ui_redesign_filled_text_box" translatable="false"> Filled Text</string>
    <string name="debug_ui_redesign_outlined_text_box" translatable="false"> Outlined Text</string>
    <string name="debug_ui_redesign_tab1" translatable="false"> Tab 1</string>
    <string name="debug_ui_redesign_tab2" translatable="false"> Tab 2</string>
    <string name="debug_ui_redesign_tab3" translatable="false"> Tab 3</string>
    <string name="debug_ui_redesign_card" translatable="false"> Card</string>
    <string name="debug_ui_redesign_text" translatable="false"> Text</string>
    <string name="debug_ui_redesign_tab_buttons" translatable="false">Buttons</string>
    <string name="debug_ui_redesign_biometric_button" translatable="false">Face ID</string>
    <string name="debug_ui_redesign_tab_typography" translatable="false">Typography</string>
    <string name="debug_ui_redesign_tab_components" translatable="false">Components</string>
    <string name="debug_ui_redesign_tab_text_input" translatable="false">Text Input</string>
    <string name="debug_ui_redesign_tab_slider" translatable="false">Slider</string>
    <string name="debug_ui_redesign_tab_account_tile" translatable="false">Account Tile</string>
    <string name="debug_ui_redesign_tab_online_payments_tile" translatable="false">Online Payments Tile</string>
    <string name="debug_ui_redesign_tab_offside_payments_account_tile" translatable="false">Payments</string>
    <string name="debug_ui_redesign_tab_deposit_activity_tile" translatable="false">Deposit Activity Tile</string>
    <string name="debug_ui_redesign_tab_amount_input_field_label" translatable="false">Amount Input Field</string>
    <string name="debug_ui_redesign_dollar_symbol" translatable="false">$</string>
    <string name="debug_ui_redesign_amount_input_hint" translatable="false">Amount*</string>
    <string name="debug_ui_redesign_amount_a11y_desc" translatable="false">Amount</string>
    <string name="debug_ui_redesign_asterisk_a11y_desc" translatable="false">asterisk</string>
    <string name="debug_ui_redesign_amount_input_important_info_desc" translatable="false">Important information, %s</string>
    <string name="debug_ui_redesign_amount_dropdown_label" translatable="false">Amount</string>
    <string name="debug_ui_redesign_amount_input_default_text" translatable="false">$0.00</string>
    <string name="debug_ui_redesign_amount_input_subtext" translatable="false">Remaining Domestic Wire Limit: $12,500.00</string>
    <string name="debug_ui_redesign_amount_input_helper_text" translatable="false">Secondary Information</string>
    <string name="debug_ui_redesign_amount_input_error_text" translatable="false">Amount must be greater than $10.00</string>
    <string name="debug_ui_redesign_amount_bottom_sheet_title" translatable="false">Payment Amount</string>
    <string name="debug_ui_redesign_okay_button_text" translatable="false">OK</string>
    <string name="debug_ui_redesign_dropdown_end_icon_content_description" translatable="false">Amount*</string>
    <string name="debug_ui_redesign_clear_end_icon_content_description" translatable="false">Clear Amount</string>
    <string name="debug_ui_redesign_close_modal_icon_content_description" translatable="false">Close</string>
    <string name="debug_ui_redesign_tab_cards" translatable="false">BottomSheet</string>
    <string name="debug_ui_redesign_tab_modals" translatable="false">Modals</string>
    <string name="debug_ui_redesign_tab_calendar" translatable="false">Calendar</string>
    <string name="debug_ui_redesign_tab_snackbars" translatable="false">Snackbars</string>
    <string name="debug_ui_redesign_tab_list_item" translatable="false">List Item</string>
    <string name="debug_ui_redesign_info_box" translatable="false">Info Boxes</string>
    <string name="debug_ui_redesign_tab_misc" translatable="false">Misc. Widgets</string>
    <string name="debug_ui_redesign_radiob1" translatable="false"> One</string>
    <string name="debug_ui_redesign_radiob2" translatable="false"> Two</string>
    <string name="debug_ui_redesign_radiob3" translatable="false"> Three</string>
    <string name="debug_ui_redesign_radiob4" translatable="false"> Four</string>
    <string name="debug_ui_redesign_enabled" translatable="false">Active</string>
    <string name="debug_ui_redesign_disabled" translatable="false">Disabled</string>
    <string name="debug_ui_redesign_disabled_selected" translatable="false">Selected and disabled</string>
    <string name="debug_ui_redesign_primary_btn" translatable="false">Primary Button</string>
    <string name="debug_ui_redesign_primary_disabled_btn" translatable="false">Primary Disabled</string>
    <string name="debug_ui_redesign_primary_half_btn" translatable="false">Primary Half</string>
    <string name="debug_ui_redesign_primary_overlay_btn" translatable="false">Primary Overlay</string>
    <string name="debug_ui_redesign_primary_overlay_disabled_btn" translatable="false">Disabled Overlay Button</string>
    <string name="debug_ui_redesign_primary_overlay_half_btn" translatable="false">Overlay Half</string>
    <string name="debug_ui_redesign_secondary_btn" translatable="false">Secondary Button</string>
    <string name="debug_ui_redesign_secondary_enabled_btn" translatable="false">Secondary Enabled Button</string>
    <string name="debug_ui_redesign_secondary_half_btn" translatable="false">Secondary Half</string>
    <string name="debug_ui_redesign_micro_buttons_label" translatable="false">Micro Buttons</string>
    <string name="debug_ui_redesign_micro_buttons_text" translatable="false">Payment: Apr 12, 2023</string>
    <string name="debug_ui_redesign_micro_buttons_payment_text" translatable="false">Payment</string>
    <string name="debug_ui_redesign_micro_buttons_sop_label" translatable="false">SoP Button</string>
    <string name="debug_ui_redesign_jumbo_buttons_label" translatable="false">Jumbo Button</string>
    <string name="debug_ui_redesign_jumbo_buttons_label_send" translatable="false">Send</string>
    <string name="debug_ui_redesign_jumbo_buttons_label_pay" translatable="false">Pay</string>
    <string name="debug_ui_redesign_type_display" translatable="false">Display Text Style</string>
    <string name="debug_ui_redesign_type_headline" translatable="false">Headline Text Style</string>
    <string name="debug_ui_redesign_type_title" translatable="false">Title Text Style</string>
    <string name="debug_ui_redesign_type_body" translatable="false">Body Text Style</string>
    <string name="debug_ui_redesign_type_label" translatable="false">Label Text Style</string>
    <string name="debug_ui_redesign_tertiary_btn" translatable="false">Tertiary Button</string>
    <string name="debug_ui_redesign_main_activity_title" translatable="false">Test Labs</string>
    <string name="debug_ui_redesign_library_title" translatable="false">UI Component Library</string>
    <string name="debug_ui_redesign_typography_title" translatable="false">Typography</string>
    <string name="debug_ui_redesign_buttons_title" translatable="false">Buttons</string>
    <string name="debug_ui_redesign_theme_title" translatable="false">Theme</string>
    <string name="debug_ui_redesign_ecommerce_Icon" translatable="false"> Ecommerce Icon</string>
    <string name="debug_ui_redesign_ecommerce_tile" translatable="false"> Ecommerce Tile</string>
    <string name="debug_ui_redesign_slider_title" translatable="false">Slider</string>
    <string name="debug_ui_redesign_slider_single_left_button" translatable="false">Slider Foreground 1 Left Button</string>
    <string name="debug_ui_redesign_slider_single_right_button" translatable="false">Slider Foreground 1 Right Button</string>
    <string name="debug_ui_redesign_slider_two_right_button" translatable="false">Slider Foreground 2 Right Button</string>
    <string name="debug_ui_redesign_slider_three_right_button" translatable="false">Slider Foreground 3 Right Button</string>
    <string name="debug_ui_redesign_slider_all_button" translatable="false">Slider Foreground All Button</string>
    <string name="debug_ui_redesign_info_box_title" translatable="false">Title</string>
    <string name="debug_ui_redesign_info_box_simple_text" translatable="false">Simple message conveying an important piece of info to a user.</string>
    <string name="debug_ui_redesign_info_box_inline_text" translatable="false">Your card is currently locked</string>
    <string name="debug_ui_redesign_compound_button_label" translatable="false">Compound and Switch Button</string>
    <string name="debug_ui_redesign_sticky_button_label" translatable="false">Sticky Button</string>
    <string name="debug_ui_redesign_grouped_checkboxes_label" translatable="false">Grouped Checkboxes</string>
    <string name="debug_ui_redesign_button_icon_with_link_label" translatable="false">Button Icon with Link</string>
    <string name="debug_ui_redesign_secondary_tertiary_button_label" translatable="false">Secondary and Tertiary Button</string>
    <string name="debug_ui_redesign_takeover_sticky_buttons_label" translatable="false">Takeover Sticky Buttons</string>
    <string name="debug_ui_redesign_snackbar_label" translatable="false">Short SnackBar</string>
    <string name="debug_ui_redesign_snackbar_with_action_label" translatable="false">Long SnackBar with Action</string>
    <string name="debug_ui_redesign_persistence_snackbar_label" translatable="false">Persistence SnackBar</string>
    <string name="debug_ui_redesign_controls_label" translatable="false">Controls</string>
    <string name="debug_ui_redesign_segment_bar_label" translatable="false">Segment Bar</string>
    <string name="debug_ui_redesign_profile_bar_label" translatable="false">Profile And Settings Bar</string>
    <string name="debug_ui_redesign_sample_text_deposit_cash" translatable="false">Deposit Cash</string>
    <string name="debug_ui_redesign_sample_text_withdraw_cash" translatable="false">Withdraw Cash</string>
    <string name="debug_ui_redesign_sample_text_cash_a_check" translatable="false">Cash a check</string>
    <string name="debug_ui_redesign_sample_text_deposit_a_check" translatable="false">Deposit a check</string>
    <string name="debug_ui_redesign_sample_text_get_a_cashiers_check" translatable="false">Get a cashier\'s check</string>
    <string name="debug_ui_redesign_search_bar_standard" translatable="false">Standard Search Bar</string>
    <string name="debug_ui_redesign_search_bar_elevated" translatable="false">Elevated Search Bar</string>
    <string name="debug_ui_redesign_stepper_back_label" translatable="false">Back</string>
    <string name="debug_ui_redesign_stepper_next_label" translatable="false">Next</string>
    <string name="debug_ui_redesign_stepper_step_five_fragment_text" translatable="false">Step 5</string>
</resources>