<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ai.offside.mobile.android.helper.testlabs.nav.TestUIRedesignButtonMainPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin.xxlarge"
        android:layout_marginHorizontal="@dimen/gutter.small">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Offside.Redesign.Button.Primary"
        android:text="@string/debug_ui_redesign_primary_button"
        app:layout_constraintBottom_toTopOf="@+id/option2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_ui_redesign_secondary_tertiary_button_label"
        style="@style/Offside.Redesign.Button.Primary"
        app:layout_constraintBottom_toTopOf="@+id/option3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_micro_buttons_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintBottom_toTopOf="@+id/option4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_jumbo_buttons_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintBottom_toTopOf="@+id/option3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/option5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_compound_button_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintTop_toBottomOf="@+id/option4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/option7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_grouped_checkboxes_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintTop_toBottomOf="@+id/option5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/option8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_button_icon_with_link_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintTop_toBottomOf="@+id/option7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/option9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_ui_redesign_takeover_sticky_buttons_label"
            style="@style/Offside.Redesign.Button.Primary"
            app:layout_constraintTop_toBottomOf="@+id/option8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>