<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin.medium"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snackbar"
        style="@style/Offside.Redesign.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_ui_redesign_snackbar_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snackbar_with_action"
        style="@style/Offside.Redesign.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin.medium"
        android:text="@string/debug_ui_redesign_snackbar_with_action_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_persistence_snackbar"
        style="@style/Offside.Redesign.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin.medium"
        android:text="@string/debug_ui_redesign_persistence_snackbar_label" />
</LinearLayout>